--- a/static/styles.css
+++ b/static/styles.css
@@ -158,6 +158,11 @@ p {
   border: 1px solid #777;
   color: #fff;
   padding: 2px 4px;
+  margin-left: -5px;
+  margin-top: -4px;
+  margin-bottom: -4px;
+  font-family: sans-serif;
+  font-size: 0.8rem;
 }
 
 .folder-display:hover {
