added re-ordering to buttons
click and drag buttons to reorder, changes get saved in the backend

--- a/static/styles.css
+++ b/static/styles.css
@@ -177,3 +177,13 @@ h4 {
   font-size: 1rem;
   font-weight: normal;
 }
+
+/* Add styling for the dragged element */
+.sortable-ghost {
+  opacity: 0.5;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.sortable-ghost .btn-move, .sortable-ghost .button-form-inline {
+  visibility: hidden;
+}
